--- a/main.html
+++ b/main.html
@@ -20,19 +20,19 @@
 			<div class="col-md-4 col-sm-4">
 				<div class="form-group">
 					<label for="first-name-input">First Name</label>
-					<input type="text" id="first-name-input" class="form-control">
+					<input type="text" id="first-name-input" class="form-control" required>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<div class="form-group">
 					<label for="last-name-input">Last Name</label>
-					<input type="text" id="last-name-input" class="form-control">
+					<input type="text" required id="last-name-input" class="form-control">
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<div class="form-group">
-					<label for="email-input">Email address</label>
-					<input type="email" class="form-control" id="email-input" placeholder="xyz@abc.com">
+					<label for="email-input">Email Address</label>
+					<input type="email" required class="form-control" id="email-input" placeholder="xyz@abc.com">
 				</div>
 			</div>
 		</div>
@@ -40,14 +40,14 @@
 			<div class="col-md-6">
 				<div class="form-group">
 					<label for="college-input">College</label>
-					<input type="text" class="form-control" id="college-input">
+					<input type="text" required class="form-control" id="college-input">
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="form-group">
-					<label for="conditions-checkbox">Graduation Year</label>
-					<select id="conditions-checkbox" class="form-control"> 
-						<option>Choose...</option>
+					<label for="grad-year-select">Graduation Year</label>
+					<select id="grad-year-select" required class="form-control conditions-checkbox"> 
+						<option selected>Choose...</option>
 						<option>2020</option>
 						<option>2021</option>
 						<option>2022</option>
@@ -58,7 +58,7 @@
 			<div class="col-md-3">
 				<div class="form-group">
 					<label for="roll-no-input">Roll No</label>
-					<input type="number" id="roll-no-input" class="form-control">
+					<input type="text" required id="roll-no-input" class="form-control">
 				</div>
 			</div>
 		</div>
