--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
 			<div class="col-md-3">
 				<div class="form-group">
 					<label for="grad-year-select" class="form-label">Graduation Year</label>
-					<select id="grad-year-select" required class="form-control"> 
+					<select id="grad-year-select" required class="form-control form-select"> 
 						<option selected>Choose...</option>
 						<option>2020</option>
 						<option>2021</option>
@@ -65,16 +65,14 @@
 			</div>
 			<div class="col-md-3">
 				<div class="form-group">
-					<label for="roll-no-input">Roll No.</label>
+					<label for="roll-no-input" class="form-label">Roll No.</label>
 					<input type="text" required id="roll-no-input" class="form-control">
 					<div class="invalid-feedback">please provide valid roll no</div>
 				</div>
 			</div>
 		</div>
-		<div class="checkbox">
-			<label><input type="checkbox" id="conditions-checkbox">Agree to the terms and conditions</label>
+			<label for="conditions-checkbox" class="form-label"><input type="checkbox" required id="conditions-checkbox">Agree to the terms and conditions</label>
 			<div class="invalid-feedback">you must agree before submitting</div>
-		</div>
 		<button class="btn btn-primary" type="submit">Submit form</button>
 	</form>
 </div>
