--- a/main.html
+++ b/main.html
@@ -71,8 +71,11 @@
 				</div>
 			</div>
 		</div>
-			<label for="conditions-checkbox" class="form-label"><input type="checkbox" required id="conditions-checkbox">Agree to the terms and conditions</label>
+		<div>
+			<label for="conditions-checkbox" class="form-label">Agree to terms and conditions</label>
+			<input type="checkbox" id="conditions-checkbox" required>
 			<div class="invalid-feedback">you must agree before submitting</div>
+		</div>
 		<button class="btn btn-primary" type="submit">Submit form</button>
 	</form>
 </div>
