--- a/main.html
+++ b/main.html
@@ -73,7 +73,7 @@
 		</div>
 		<div>
 			<label for="conditions-checkbox" class="form-label">Agree to terms and conditions</label>
-			<input type="checkbox" id="conditions-checkbox" required>
+			<input type="checkbox" id="conditions-checkbox" required class="form-control form-check">
 			<div class="invalid-feedback">you must agree before submitting</div>
 		</div>
 		<button class="btn btn-primary" type="submit">Submit form</button>
